docs/api/qiskit/0.19/qiskit.transpiler.PassManager.mdx
---
title: PassManager (v0.19)
description: API reference for qiskit.transpiler.PassManager in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.PassManager
---

# PassManager

<Class id="qiskit.transpiler.PassManager" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passmanager.py" signature="PassManager(passes=None, max_iteration=1000, callback=None)" modifiers="class">
  Manager for a set of Passes and their scheduling during transpilation.

  Initialize an empty PassManager object (with no passes scheduled).

  **Parameters**

  *   **passes** (`Union`\[`BasePass`, `List`\[`BasePass`], `None`]) – A pass set (as defined in [`qiskit.transpiler.PassManager.append()`](qiskit.transpiler.PassManager#append "qiskit.transpiler.PassManager.append")) to be added to the pass manager schedule.
  *   **max\_iteration** (`int`) – The maximum number of iterations the schedule will be looped if the condition is not met.
  *   **callback** (`Optional`\[`Callable`]) – DEPRECATED - A callback function that will be called after each pass execution.

  <Admonition title="Deprecated since version 0.13.0" type="danger">
    The `callback` parameter is deprecated in favor of `PassManager.run(..., callback=callback, ...)`.
  </Admonition>

  ## Methods

  <span id="passmanager-getitem" />

  ### \_\_getitem\_\_

  <Function id="qiskit.transpiler.PassManager.__getitem__" signature="PassManager.__getitem__(index)" />

  <span id="passmanager-len" />

  ### \_\_len\_\_

  <Function id="qiskit.transpiler.PassManager.__len__" signature="PassManager.__len__()" />

  <span id="passmanager-append" />

  ### append

  <Function id="qiskit.transpiler.PassManager.append" signature="PassManager.append(passes, max_iteration=None, **flow_controller_conditions)">
    Append a Pass Set to the schedule of passes.

    **Parameters**

    *   **passes** (`Union`\[`BasePass`, `List`\[`BasePass`]]) – A set of passes (a pass set) to be added to schedule. A pass set is a list of passes that are controlled by the same flow controller. If a single pass is provided, the pass set will only have that pass a single element.
    *   **max\_iteration** (`Optional`\[`int`]) – max number of iterations of passes.
    *   **flow\_controller\_conditions** (`Any`) – control flow plugins.

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if a pass in passes is not a proper pass.

    <Admonition title="See also" type="note">
      `RunningPassManager.add_flow_controller()` for more information about the control flow plugins.
    </Admonition>

    **Return type**

    `None`
  </Function>

  <span id="passmanager-draw" />

  ### draw

  <Function id="qiskit.transpiler.PassManager.draw" signature="PassManager.draw(filename=None, style=None, raw=False)">
    Draw the pass manager.

    This function needs [pydot](https://github.com/erocarrera/pydot), which in turn needs [Graphviz](https://www.graphviz.org/) to be installed.

    **Parameters**

    *   **filename** (*str*) – file path to save image to.
    *   **style** (*dict*) – keys are the pass classes and the values are the colors to make them. An example can be seen in the DEFAULT\_STYLE. An ordered dict can be used to ensure a priority coloring when pass falls into multiple categories. Any values not included in the provided dict will be filled in from the default dict.
    *   **raw** (*bool*) – If `True`, save the raw Dot output instead of the image.

    **Returns**

    an in-memory representation of the pass manager, or `None` if no image was generated or [Pillow](https://pypi.org/project/Pillow/) is not installed.

    **Return type**

    Optional\[[PassManager](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager")]

    **Raises**

    **ImportError** – when nxpd or pydot not installed.
  </Function>

  <span id="passmanager-passes" />

  ### passes

  <Function id="qiskit.transpiler.PassManager.passes" signature="PassManager.passes()">
    Return a list structure of the appended passes and its options.

    **Return type**

    `List`\[`Dict`\[`str`, `BasePass`]]

    **Returns**

    A list of pass sets, as defined in `append()`.
  </Function>

  <span id="passmanager-replace" />

  ### replace

  <Function id="qiskit.transpiler.PassManager.replace" signature="PassManager.replace(index, passes, max_iteration=None, **flow_controller_conditions)">
    Replace a particular pass in the scheduler.

    **Parameters**

    *   **index** (`int`) – Pass index to replace, based on the position in passes().
    *   **passes** (`Union`\[`BasePass`, `List`\[`BasePass`]]) – A pass set (as defined in [`qiskit.transpiler.PassManager.append()`](qiskit.transpiler.PassManager#append "qiskit.transpiler.PassManager.append")) to be added to the pass manager schedule.
    *   **max\_iteration** (`Optional`\[`int`]) – max number of iterations of passes.
    *   **flow\_controller\_conditions** (`Any`) – control flow plugins.

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if a pass in passes is not a proper pass.

    <Admonition title="See also" type="note">
      `RunningPassManager.add_flow_controller()` for more information about the control flow plugins.
    </Admonition>

    **Return type**

    `None`
  </Function>

  <span id="passmanager-run" />

  ### run

  <Function id="qiskit.transpiler.PassManager.run" signature="PassManager.run(circuits, output_name=None, callback=None)">
    Run all the passes on the specified `circuits`.

    **Parameters**

    *   **circuits** (`Union`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), `List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]]) – Circuit(s) to transform via all the registered passes.

    *   **output\_name** (`Optional`\[`str`]) – The output circuit name. If `None`, it will be set to the same as the input circuit name.

    *   **callback** (`Optional`\[`Callable`]) –

        A callback function that will be called after each pass execution. The function will be called with 5 keyword arguments:

        ```python
        pass_ (Pass): the pass being run
        dag (DAGCircuit): the dag output of the pass
        time (float): the time to execute the pass
        property_set (PropertySet): the property set
        count (int): the index for the pass execution
        ```

        The exact arguments pass expose the internals of the pass manager and are subject to change as the pass manager internals change. If you intend to reuse a callback function over multiple releases be sure to check that the arguments being passed are the same.

        To use the callback feature you define a function that will take in kwargs dict and access the variables. For example:

        ```python
        def callback_func(**kwargs):
            pass_ = kwargs['pass_']
            dag = kwargs['dag']
            time = kwargs['time']
            property_set = kwargs['property_set']
            count = kwargs['count']
            ...
        ```

    **Return type**

    `Union`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), `List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]]

    **Returns**

    The transformed circuit(s).
  </Function>
</Class>

